Fix "Development version" notice alignment

--- a/frontend/less/development-banner.less
+++ b/frontend/less/development-banner.less
@@ -1,7 +1,7 @@
 .development-banner {
 	position: absolute;
 	left: -300px;
-	right: 0;
+	right: -300px;
 	top: 0;
 	padding-top: 10px;
 	padding-bottom: 25px;
